Some code fix